clean up use jpl instead of jul